--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.3.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "ioredis": "^5.3.2",
     "nodemon": "^2.0.22",
     "openai": "^3.2.1",
     "os": "^0.1.2",
