--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "chatgbt_telegrambot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +18,7 @@
     "ioredis": "^5.3.2",
     "nodemon": "^2.0.22",
     "openai": "^3.2.1",
-    "os": "^0.1.2",
+    "redis": "^4.6.5",
     "telegraf": "^4.12.2"
   }
 }
